--- a/signup.html
+++ b/signup.html
@@ -36,17 +36,23 @@
                     <label>Enter your full name</label>
                     <input type="text" name="name">
 
-                    <label>Enter your email</label>
-                    <input type="email" name="email">
-
-                    <label>Enter your phone</label>
-                    <input type="tel" name="phone">
-
                     <label>How should we contact you?</label>
-                    <span class="contact_Method_Class" id="contactMethodEmail">Email</span>
+                    <select name="contact_method" id="contact_method">
+                        <option value="Select_One">Select One</option>
+                        <option value="Email">Email</option>
+                        <option value="Phone">Phone</option>
+                    </select>
+                    <!-- <span class="contact_Method_Class" id="contactMethodEmail">Email</span>
                     <input class="contact_Method_Class" type="radio" name="contact" value="contact_Email">
                     <span class="contact_Method_Class" id="contactMethodPhone">Phone</span>
-                    <input class="contact_Method_Class" type="radio" name="contact" value="contact_Phone">
+                    <input class="contact_Method_Class" type="radio" name="contact" value="contact_Phone"> -->
+
+                    <label id="contact_Info_Label"></label>
+                    <input id="contact_Info_Input">
+
+                    <!-- <label>Enter your phone</label>
+                    <input type="tel" name="phone"> -->
+
 
                     <label class="why_Volunteer">Why do you sign up for volunteer?</label>
                     <textarea name="reason_For_Volunteer" cols="30" rows="3"></textarea>
