Update JS for contact method part.

--- a/signup.html
+++ b/signup.html
@@ -86,7 +86,8 @@
         </footer>
         <!-- Footer Area -->
 
-
+        <script src="signupJS.js"></script>
+        
     </div>
     
 </body>
